# spiderpy

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
itho_daalderop_api/: __init__.py  itho_daalderop_api.py  test_itho_daalderop_api.py
spiderpy/: __init__.py  spiderapi.py  test_spiderapi.py
spiderpy/devices/: base.py  powerplug.py  thermostat.py
