[tool.poetry]
name = "spiderpy"
version = "1.7.2"
description = "Python wrapper for the Spider API, a way to manage your Spider installation"
authors = ["Peter Nijssen <peter@peternijssen.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"
mypy = "^0.910"
pyupgrade = "^2.37.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
