[tool.poetry]
name = "spiderpy"
version = "1.7.2"
description = "Python wrapper for the Spider API, a way to manage your Spider installation"
authors = ["Peter Nijssen <peter@peternijssen.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.3"
black = "^23.1"
isort = "^5.12.0"
pylint = "^2.16.1"
mypy = "^0.991"
pyupgrade = "^3.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
